intranet-kubernetes/orangehrm/orangehrm-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orangehrm
  namespace: intranet-campusna
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orangehrm
  template:
    metadata:
      labels:
        app: orangehrm
    spec:
      containers:
        - name: orangehrm
          image: orangehrm/orangehrm:5.4
          ports:
            - containerPort: 80
          volumeMounts:
            - name: orangehrm-persistent-storage
              mountPath: /orangehrm
      volumes:
        - name: orangehrm-persistent-storage
          emptyDir: {}
