intranet-kubernetes/orangehrm/serv.yaml
apiVersion: v1
kind: Service
metadata:
  name: orangehrm-service
  namespace: intranet-campusna
spec:
  selector:
    app: orangehrm
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
