intranet-kubernetes/orangehrm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-orange-hrm
  namespace: intranet-campusna
  annotations:
    # Ingress Core Settings
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/load-balancer-name: orangehrm
    ## SSL Settings
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-3:240391254719:certificate/58d5b66e-3605-4c3b-8534-17df60f4dcff
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  ingressClassName: "alb"
  rules:
    - host: orangehrm.campusna.com
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: orangehrm-service
                port:
                  number: 80
